--- a/Copy_of_logitReg.ipynb
+++ b/Copy_of_logitReg.ipynb
@@ -620,11 +620,16 @@
       "metadata": {
         "id": "8_ieXM-PmkrV",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 129
+        },
+        "outputId": "97bd7d58-c7f0-42d6-94ec-78dcadd6a405"
       },
       "cell_type": "code",
       "source": [
-        "def my_input_fn(features,targets,batch_size=1,shuffle=true,num_epochs=None):\n",
+        "def my_input_fn(features,targets,batch_size=1,shuffle=True,num_epochs=None):\n",
+        "  \n",
         "  \"\"\"Trains a linear regression model.\n",
         "  \n",
         "    Args:\n",
@@ -635,9 +640,9 @@
         "      num_epochs: Number of epochs for which data should be repeated. None = repeat indefinitely\n",
         "    Returns:\n",
         "      Tuple of (features, labels) for next data batch\n",
-        "    \"\"\"\n",
+        "  \"\"\"\n",
+        "    #convert features into a dict of np array\n",
         "    \n",
-        "    #convert features into a dict of np arrays\n",
         "    features={key:np.array(value) for key,value in dict(features).items()}\n",
         "    print (features)\n",
         "    \n",
@@ -645,8 +650,41 @@
         "    ds=DataSet.from_tensor_slices((features,targets))\n",
         "    ds=ds.batch(batch_size).repeat(num_epochs)\n",
         "    \n",
+        "    #shuffle if shuffle is set to true\n",
+        "    if shuffle:\n",
+        "      ds=ds.shuffle(10000)\n",
+        "      \n",
+        "    #return batches of data\n",
+        "    features, labels=ds.make_one_shot_iterator().get_next()\n",
+        "    return feature,labels\n",
+        "  \n",
+        "  \n",
+        "      \n",
+        "    \n",
         "    \n",
         "  "
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "IndentationError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-98361c87368c>\"\u001b[0;36m, line \u001b[0;32m16\u001b[0m\n\u001b[0;31m    features={key:np.array(value) for key,value in dict(features).items()}\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+          ]
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "vbx0EQdDyugT",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        ""
       ],
       "execution_count": 0,
       "outputs": []
